fix: list table dark mode css

--- a/assets/scss/control/_plugin-mode.scss
+++ b/assets/scss/control/_plugin-mode.scss
@@ -302,10 +302,6 @@
 	.rdt_Table {
 		background: #252f47;
 		color: $white;
-		> div {
-			background: #252f47;
-			color: white;
-		}
 		.rdt_TableCol_Sortable {
 			div {
 				color: $white;
@@ -1236,5 +1232,11 @@
 				color: $white;
 			}
 		}
+	}
+}
+.rdt_Table {
+	> div {
+		background: #252f47;
+		color: white;
 	}
 }
